Register - alignment issue fixed

--- a/css/register.css
+++ b/css/register.css
@@ -137,7 +137,7 @@ html,body{margin:0; padding:0;}
 
 @media handheld, only screen and (max-width: 786px) {
 
-    .registerbx {margin-left: 12.1%; height: 892px}
+    .registerbx {margin-left: 12.1%; height: 100%;}
 
 }
 
